# zengine

./: CMakeLists.txt  CMakePresets.json  build.sh  vcpkg.json
assets/shaders/: wireframe.geom
cmake/: FindLibOpcodes.cmake
examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp
include/: Application.hpp  BackTrace.hpp  Blob.hpp  Camera.hpp  Canvas.hpp  Color.hpp  Controls.hpp  CpuRayTracer.hpp  Cubemap.hpp  DrawCubePass.hpp  FileSystem.hpp  FlyControl.hpp  Geometry.hpp  HelloTriangle.hpp  Image.hpp  Logging.hpp  Math.hpp  Md5.hpp  Overlay2D.hpp  Ray.hpp  RenderingSystem.hpp  ShaderProgram.hpp  SkyboxPass.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp  signal.hpp  strutil.hpp
src/: Application.cpp  BackTrace.cpp  Blob.cpp  Camera.cpp  Canvas.cpp  Color.cpp  Controls.cpp  CpuRayTracer.cpp  Cubemap.cpp  DrawCubePass.cpp  FileSystem.cpp  FlyControl.hpp  Geometry.cpp  HelloTriangle.cpp  Image.cpp  Logging.cpp  Md5.cpp  Overlay2D.cpp  RenderingSystem.cpp  ShaderProgram.cpp  ShaderProgram.hpp  SkyboxPass.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  stb_image.cpp  strutil.cpp
tests/: main.cpp  test_BackTrace.cpp  test_Camera.cpp  test_CpuRayTracer.cpp  test_Geometry.cpp  test_Math.cpp  test_Md5.cpp
